<resources>
    <string name="Success">Success</string>
    <string name="Loading">Loading...</string>

    <string name="app_name">中金财付通</string>

    <string name="main_activity">首页</string>
    <string name="profile">我的账户</string>
    <string name="initiate">我发起的</string>
    <string name="spreading">我的推广</string>
    <string name="participated">我参与的</string>
    <string name="integral">我的积分</string>


    <string name="back">返回</string>

    <string name="p2p">p2p理财</string>
    <string name="zc">众筹</string>
    <string name="ct">创投</string>
    <string name="jj">基金</string>
    <string name="gy">公益</string>
    <string name="mx">梦想</string>

    <string name="more">更多</string>
    <string name="guide_tz">推荐投资项目</string>
    <string name="guide_zc">推荐众筹项目</string>

    <string name="yqnh">预期年化</string>
    <string name="rzje">融资金额</string>

    <string name="lv">利率</string>
    <string name="rzqx">融资期限</string>
    <string name="condition">筛选条件</string>

    <string name="left_time">剩余时间</string>
    <string name="hkfs">还款方式</string>
    <string name="qtje">起投金额</string>
    <string name="tzjl">起投记录</string>
    <string name="jkrxx">借款人信息</string>

    <string name="tz">立即投资</string>
    <string name="sy">我的收益</string>
    <string name="ye">账户余额</string>

    <string name="cz">账户充值</string>
    <string name="tx">我的提现</string>

    <!-- login & register -->
    <string name="login">登录</string>
    <string name="logout">退出</string>
    <string name="userName">请输入您的手机号</string>
    <string name="userPwd">请输入进的密码</string>
    <string name="forgetPwd">忘记密码</string>
    <string name="register">注册</string>
    <string name="phone">手机号</string>
    <string name="code">验证码</string>
    <string name="pwd">密码</string>
    <string name="nick">昵称</string>
    <string name="getCode">获取验证码</string>

    <!-- load_more  begin -->
    <string name="cube_views_load_more_loading">加载中。。。</string>
    <string name="cube_views_load_more_loaded_empty">数据为空</string>
    <string name="cube_views_load_more_error">加载失败,点击重试</string>
    <string name="cube_views_load_more_click_to_load_more">点击加载更多</string>
    <string name="cube_views_load_more_loaded_no_more">全部数据加载完毕</string>
    <!-- load_more  end -->

    <!-- Drawer begin -->
    <string name="navigation_drawer_open">drawer_open</string>
    <string name="navigation_drawer_close">drawer_close</string>
    <!-- Drawer end -->

    <!-- toast -->
    <string name="hint_phone_empty">请输入正确的手机号</string>
    <string name="hint_code_empty">请输入正确的验证码</string>
    <string name="hint_code_error">验证码不正确</string>
    <string name="hint_pwd_empty">请输入密码</string>
    <string name="hint_pwd_error">两次输入的密码不一致</string>
    <string name="hint_nick_empty">昵称为空</string>
    <string name="hint_reg_success">注册成功</string>



    <!-- pull2refresh -->
    <string name="cube_ptr_pull_down">下拉</string>
    <string name="cube_ptr_pull_down_to_refresh">下拉刷新</string>
    <string name="cube_ptr_release_to_refresh">释放刷新</string>
    <string name="cube_ptr_refreshing">加载中...</string>
    <string name="cube_ptr_refresh_complete">更新完成.</string>

    <string name="cube_ptr_last_update">上次更新:&#160;</string>
    <string name="cube_ptr_seconds_ago">&#160;秒之前</string>
    <string name="cube_ptr_minutes_ago">&#160;分钟之前</string>
    <string name="cube_ptr_hours_ago">&#160;小时之前</string>

</resources>
