<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/main"
            android:icon="@mipmap/drawer_home_click"
            android:title="@string/main_activity" />
        <item
            android:id="@+id/profile"
            android:icon="@mipmap/drawer_profile"
            android:title="@string/profile" />
        <item
            android:id="@+id/initiate"
            android:icon="@mipmap/drawer_initiate"
            android:title="@string/initiate" />
        <item
            android:id="@+id/spreading"
            android:icon="@mipmap/drawer_spreading"
            android:title="@string/spreading" />
        <item
            android:id="@+id/participated"
            android:icon="@mipmap/drawer_participated"
            android:title="@string/participated" />
        <item
            android:id="@+id/integral"
            android:icon="@mipmap/drawer_integral"
            android:title="@string/integral" />
    </group>
</menu>
