<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/lay_sort"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/lv"
        android:layout_width="match_parent"
        android:layout_height="@dimen/menu_big_size"
        android:gravity="center"
        android:text="@string/lv"
        android:textSize="@dimen/text_big_size" />

    <TextView
        android:id="@+id/rzqx"
        android:layout_width="match_parent"
        android:layout_height="@dimen/menu_big_size"
        android:gravity="center"
        android:text="@string/rzqx"
        android:textSize="@dimen/text_big_size" />

    <TextView
        android:id="@+id/rzje"
        android:layout_width="match_parent"
        android:layout_height="@dimen/menu_big_size"
        android:gravity="center"
        android:text="@string/rzje"
        android:textSize="@dimen/text_big_size" />

</LinearLayout>
