<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <com.aako.zjp2p.widget.TopBar
        android:id="@+id/topbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleText="@string/register" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/label_height"
        android:layout_marginTop="@dimen/def_margin"
        android:background="@android:color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_margin="@dimen/def_margin"
            android:padding="@dimen/button_corner"
            android:src="@mipmap/reg_phone" />

        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/phone"
            android:textColor="@color/text"

            android:textSize="@dimen/text_big_size" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider"
        android:layout_marginLeft="35dp"
        android:background="@color/divider" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/label_height"
        android:background="@android:color/white"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/codeImg"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_margin="@dimen/def_margin"
            android:padding="@dimen/button_corner"
            android:src="@mipmap/reg_code" />

        <EditText
            android:id="@+id/code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/codeImg"
            android:background="@null"
            android:hint="@string/code"
            android:textColor="@color/text"
            android:textSize="@dimen/text_big_size" />

        <com.gc.materialdesign.views.ButtonRectangle
            android:id="@+id/getCode"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_margin="@dimen/divider"
            android:background="@color/red"
            android:text="@string/getCode" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider"
        android:layout_marginLeft="35dp"
        android:background="@color/divider" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/label_height"
        android:background="@android:color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/pwdImg"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_margin="@dimen/def_margin"
            android:padding="@dimen/button_corner"
            android:src="@mipmap/reg_pwd" />

        <EditText
            android:id="@+id/pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/pwdImg"
            android:background="@null"
            android:hint="@string/pwd"
            android:textColor="@color/text"
            android:textSize="@dimen/text_big_size" />

        <ImageView
            android:id="@+id/pwd_state"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_margin="@dimen/def_margin"
            android:padding="@dimen/button_corner"
            android:src="@mipmap/reg_pwd_unsee" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider"
        android:layout_marginLeft="35dp"
        android:background="@color/divider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/label_height"
        android:background="@android:color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_margin="@dimen/def_margin"
            android:padding="@dimen/button_corner"
            android:src="@mipmap/reg_nick" />

        <EditText
            android:id="@+id/nick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/nick"
            android:textColor="@color/text"
            android:textSize="@dimen/text_big_size" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider"
        android:background="@color/divider" />

    <com.gc.materialdesign.views.ButtonRectangle
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_margin="@dimen/def_margin"
        android:background="@color/red"
        android:text="@string/register" />

</LinearLayout>